Water tower: Made the hose draggable
Water tower: Added a nozzle graphic for the hose
Moved the water tower slightly to the left
Moved fluid density controls to the bottom right in all tabs
Moved reset all button directly under the control panel in all tabs
Pressure: Moved the control panel to the top right to match the other tabs
Fixed control panel insets in all tabs
Changed the control from flux to flow rate
Made flux readout dependent on flow rate, not the other way around
Renamed "Rate:" to "Flow Rate:"
Moved "metric" before "English" in units systems and made "metric" default on "flow" and "water tower" tabs
Pressure: Made sensors 20% larger
# 0.00.15 (56022) Sep 1, 2011
Improved insets and spacing for control panels
Moved up "ft^3/s" in rate readout in flux meter for english only since the units weren't centered
Fixed: Reset all broken for toolbox sensors
Fixed: Tools should snap back to the right location when dropped over the toolbox
Flow & Water tower: Added a toolbox for the tools
Fixed: Sensor positions shouldn't overlap the control panel for long translated versions
Pressure: Fixed initial location of pressure sensor
Fixed hot spot of pressure sensor to be in the center-left, not top-left
Constrained the pressure sensor node to remain in the visible region of the canvas, see #2826
Constrained the velocity sensor node to remain in the visible region of the canvas, see #2826
Fixed: Update the value in the velocity sensor on reset, without this call it would reset to "?" even if 0.00 was the original value
Fixed: Reset all should restore the sim-speed slider value
Fixed: Play/pause buttons should reset
Fixed: Sim should be running, not paused after reset
Flow: Fixed: Flux doesn't reset
Flow: Fixed: Flux meter should hide on "reset all"
Flow: Fixed: Flux meter location should reset on "reset all"
Flow: Fixed: Friction checkbox doesn't reset
Flow: Fixed: Reset all should reset the "dots" checkbox
Water tower: Fixed: Hose does not reset on "reset all"